--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "init:gitignore:custom": "echo \"dist\" >> .gitignore",
         "test": "npm-run-all test:*",
         "test:html": "globstar nu-html-checker dist/*.html",
-        "test:js": "eslint src/js/",
+        "test:js": "eslint --fix src/js/",
         "test:scss": "stylelint src/sass/",
         "build": "npm-run-all build:* test",
         "build:clean": "mkdirp dist && rm -r dist && mkdirp dist",
@@ -40,7 +40,7 @@
         "npm-run-all": "^4.1.5",
         "nu-html-checker": "^0.1.0",
         "onchange": "^5.2.0",
-        "stylelint": "^9.10.1",
+        "stylelint": "^13.7.2",
         "stylelint-scss": "^3.5.4"
     }
 }
