--- a/src/db/app.json
+++ b/src/db/app.json
@@ -206,10 +206,10 @@
   "event": [
     {
       "id": 1,
-      "date": "2019-01-01",
+      "date": "2020-01-01",
       "hour": "12:30",
       "table": 1,
-      "repeat": false,
+      "repeat": "2020-12-29",
       "duration": 4,
       "ppl": 3,
       "starters": []
